--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <br>
     <br>
 <div class="button-mid">
-    <input class="button-middle" type="button" value="Refresh Page" onClick="window.location.reload();">
+    <input class="button-middle" type="button" value="Roll Dice" onClick="window.location.reload();">
     <br>
     <br>
     <a href="index.html">
